--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{{ page.title }}</title>
   <link rel="stylesheet" href="{{site.baseurl}}/assets/css/styles.css">
+  <link rel="stylesheet" href="{{site.baseurl}}/assets/css/.css">
 </head>
 <body>
   {% include navigation.html %}
