--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -4,14 +4,6 @@
  source: https://github.com/lucagez/medium.css/
  **/
 
-// html,
-// body {
-//   margin: 0;
-//   width: 100%;
-// }
-
-h1,
-h2,
 p,
 i,
 a,
@@ -21,54 +13,31 @@ a,
   text-rendering: optimizeLegibility;
 }
 
-h1 {
-  font-family: "Playfair Display", serif;
-  font-size: 48px;
-  text-align: left;
-  margin-bottom: 8px;
-}
-
-h2 {
-  font-family: "Lato", sans-serif;
-  font-size: 26px;
-  font-weight: 700;
-  padding: 0;
-  margin: 56px 0 -13px -1.883px;
-  text-align: left;
-  line-height: 34.5px;
-  letter-spacing: -0.45px;
-}
-
+$p-margin-top: 2.1rem;
 p, i, a {
-  margin-top: 21px;
+  margin-top: $p-margin-top;
   font-family: "Lora";
-  font-size: 21px;
+  font-size: 1.8rem;
   letter-spacing: -0.03px;
   line-height: 1.58;
 }
 
-// a {
-//   text-decoration: underline;
-// }
-
 blockquote {
-  font-family: "Playfair Display", serif;
-  font-size: 30px;
+  font-size: 2.8rem;
   font-style: italic;
   letter-spacing: -0.36px;
-  line-height: 44.4px;
+  line-height: 4.2rem;
   overflow-wrap: break-word;
   margin: 55px 0 33px 0;
-  /* text-align: center; */
   color: rgba(0, 0, 0, 0.68);
-  padding: 0 0 0 50px;
 }
 
 code {
-  font-size: 1.8rem;
-  background: rgba(0,0,0,.05);
-  border-radius: 2px;
+  font-size: 1.6rem;
+  border-radius: 3px;
   padding: 3px 5px;
+  font-family: Menlo,Monaco,"Courier New",Courier,monospace;
+  background-color: #eff0f1;
 }
 
 mark, .highlighted {
@@ -92,4 +61,4 @@ mark, .highlighted {
   margin: 0 0 24px 0;
 }
 
-// ::selection{background-color: lavender}
+::selection{background-color: darkorange}
