--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,16 @@
-<nav>
-  {% for item in site.data.navigation %}
-    <a href="{{site.baseurl}}{{ item.link }}" {% if page.url == item.link %}class="isActive" {% endif %}>{{ item.name }}</a>
-  {% endfor %}
+<nav id="nav-menu-wrapper-full">
+    <div id="nav-menu-wrapper">
+        <div id="site-name">
+            <a href="{{site.baseurl}}/">
+                <div><span id="logo">&#x276E;&#xb7;&#x276F;</span><span id="letter">OPHIE</span></div>
+            </a>
+        </div>
+        <div id="nav-menu">
+            {% for item in site.data.navigation %}
+            <a href="{{site.baseurl}}{{ item.link }}" {% if page.url == item.link %}class="isActive"
+                {% endif %}>{{ item.name }}</a>
+            {% endfor %}
+        </div>
+        <div style="clear:both"></div>
+    </div>
 </nav>
