--- a/assets/css/blog.scss
+++ b/assets/css/blog.scss
@@ -1,21 +1,17 @@
 --- 
 --- 
 @import "main";
+@import "navigation";
 
 @media screen and (max-width: 767px) {
   body {
     padding: 0 4%;
   }
-
-  #letter {
-    display: none;
-  }
 }
 
 @media screen and (min-width: 768px) {
   .post,
-  #pagination,
-  #nav-menu-wrapper {
+  #pagination {
     margin: auto;
     max-width: 70%;
   }
@@ -23,72 +19,12 @@
 
 @media screen and (min-width: 960px) {
   .post,
-  #pagination,
-  #nav-menu-wrapper {
+  #pagination {
     margin: auto;
     max-width: 50%;
   }
 }
 
-#nav-menu-wrapper-full {
-  border-bottom: 1px #e1e4e8 solid !important;
-}
-
-#nav-menu-wrapper {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 1.4rem;
-  line-height: 1.5;
-  height: 100%;
-  display: flex;
-  padding: 2.5rem 0;
-
-  #site-name {
-    font-size: 3rem;
-
-    a {
-      text-decoration: none;
-      color: inherit;
-      border: none;
-      margin: 0;
-      font-weight: 500;
-      font-family: 'Courier New', Courier, monospace;
-      font-size: 3rem;
-      align-items: center;
-      display: flex;
-      justify-content: space-between;
-
-      #logo {
-        letter-spacing: -0.5rem;
-        padding: 0 1rem 0 0;
-      }
-
-      #letter {
-        padding: 0 1rem;
-      }
-    }
-  }
-
-  #nav-menu {
-    flex-grow: 100;
-    flex-direction: row;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-
-    a {
-      text-decoration: none;
-      color: $siimple-default-primary;
-      border: none;
-      margin: 0;
-      padding: 0 1rem;
-      font-family: 'Courier New', Courier, monospace;
-    }
-
-    a:hover {
-      color: black !important;
-    }
-  }
-}
 
 
 article {
