--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,16 +1,18 @@
-<nav id="nav-menu-wrapper-full">
-    <div id="nav-menu-wrapper">
-        <div id="site-name">
-            <a href="{{site.baseurl}}/">
-                <div><span id="logo">&#x276E;&#xb7;&#x276F;</span><span id="letter">OPHIE</span></div>
-            </a>
-        </div>
-        <div id="nav-menu">
-            {% for item in site.data.navigation %}
-            <a href="{{site.baseurl}}{{ item.link }}" {% if page.url == item.link %}class="isActive"
-                {% endif %}>{{ item.name }}</a>
-            {% endfor %}
-        </div>
-        <div style="clear:both"></div>
+<header class="nav__bar">
+    <div>
+        <a href="{{site.baseurl}}/" class="link uncolored">
+            <div class="nav__brand"><span class="logo">&#x276E;&#xb7;&#x276F;</span><span
+                    class="site-name nav__site-name">OPHIE</span></div>
+        </a>
     </div>
-</nav>
+    <nav class="nav__menu">
+        {% for item in site.data.navigation %}
+        <a class="menu__item link 
+                menu__item--right 
+                menu__item--hoverable 
+                {% if page.url == item.link %}menu__item--active{% endif %}"
+            href="{{site.baseurl}}{{ item.link }}">{{ item.name }}</a>
+        {% endfor %}
+    </nav>
+    <div style="clear:both"></div>
+</header>
