--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -1,28 +1,16 @@
---- 
---- 
-@import "main";
-@import "navigation";
 
 @media screen and (max-width: 767px) {
-  body {
+  .content {
     padding: 0 4%;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .post,
-  #pagination {
-    margin: auto;
-    max-width: 70%;
-  }
+
 }
 
 @media screen and (min-width: 960px) {
-  .post,
-  #pagination {
-    margin: auto;
-    max-width: 50%;
-  }
+
 }
 
 
@@ -64,22 +52,14 @@ article {
   }
 }
 
-#pagination {
+.pagination__link {
   font-size: 1.7rem;
-  letter-spacing: 0.3px;
 
-  a {
-    text-decoration: none;
-    font-size: inherit;
-    border: none;
-    color: inherit;
-
-    :hover {
-      color: $siimple-default-primary;
-    }
+  &:hover {
+    color: $siimple-default-primary;
   }
 }
 
-#mid-div {
+.pagination__divider {
   vertical-align: middle;
 }
