refactor blog css and add posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,3 @@
----
-layout: null
----
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,69 +5,21 @@ layout: null
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>{{ site.title }}</title>
+  <title>{{ page.title }}</title>
   <link rel="stylesheet" href="{{site.baseurl}}/assets/css/styles.css">
 </head>
 
 <body>
-  {% include navigation.html %}
+  <div class="container container--centered">
+    {% include navigation.html %}
 
-  <main>
-    {% for i in site.data.navigation %}
-    <article>
-      <div class="post">
-        <h1 class="title"><a href="#">consectetur adipiscing elit</a></h1>
-        <time><small>26 May 2017 15:32</small></time>
+    {% if page.html_content %}
+    {% include {{ page.html_content }} %}
+    {% endif %}
 
-        <div class="excerpt">
-          <p>Lorem ipsum dolor sit amet, <em>consectetur adipiscing elit</em>, sed do eiusmod tempor
-            incididunt ut
-            labore et <small>dolore</small> magna aliqua. Ut enim ad minim veniam, <strong>quis
-              nostrud</strong> exercitation
-            ullamco
-            laboris nisi ut
-            aliquip <code>ex ea commodo</code> consequat exercitation <a href="#">ullamco laboris</a> nisi
-            ut
-            exercitation ullamco laboris nisi ut . . . <a href="#">read more</a></p>
-          <p>Lorem ipsum dolor sit amet, <em>consectetur adipiscing elit</em>, sed do eiusmod tempor
-            incididunt ut
-            labore et <small>dolore</small> magna aliqua. Ut enim ad minim veniam, <strong>quis
-              nostrud</strong> exercitation
-            ullamco
-            laboris nisi ut
-            aliquip <code>ex ea commodo</code> consequat exercitation <a href="#">ullamco laboris</a> nisi
-            ut
-            exercitation ullamco laboris nisi ut . . . <a href="#">read more</a></p>
-        </div>
-      </div>
-    </article>
+    {{ content }}
+  </div>
 
-    <article>
-      <div class="post">
-        <h1 class="title">Lorem ipsum dolor sit amet</h1>
-        <time><small>26 May 2017 15:32</small></time>
-
-        <div class="excerpt">
-          Lorem ipsum dolor sit amet, <em>consectetur adipiscing elit</em>, sed do eiusmod tempor
-          incididunt ut
-          labore et <small>dolore</small> magna aliqua. Ut enim ad minim veniam, <strong>quis
-            nostrud</strong> exercitation
-          ullamco
-          laboris nisi ut
-          aliquip <code>ex ea commodo</code> consequat exercitation <a href="#">ullamco laboris</a> nisi
-          ut
-          exercitation ullamco laboris nisi ut . . . <a href="#">read more</a>
-        </div>
-      </div>
-    </article>
-    {% endfor %}
-  </main>
-  <section id="pagination-wrapper">
-    <div id="pagination">
-      <a href="#">&#x2039;<strong> newer posts</strong></a> <span id="mid-div">&#183;</span> <a href="#"><strong>older
-          posts </strong>&#x203A;</a>
-    </div>
-  </section>
 </body>
 
 </html>
