--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -14,13 +14,13 @@ a,
 }
 
 $p-margin-top: 2.1rem;
-p, i, a {
-  margin-top: $p-margin-top;
-  font-family: "Lora";
-  font-size: 1.8rem;
-  letter-spacing: -0.03px;
-  line-height: 1.58;
-}
+// p, i, a {
+//   margin-top: $p-margin-top;
+//   font-family: "Lora";
+//   font-size: 1.8rem;
+//   letter-spacing: -0.03px;
+//   line-height: 1.58;
+// }
 
 blockquote {
   font-size: 2.8rem;
