--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -1,13 +1,12 @@
 @media screen and (max-width: 500px) {
   .nav__bar {
-    padding: 0.5rem 0;
+    padding: 0.5rem 1rem;
   }
 }
 
 @media screen and (min-width: 500px) {
   .nav__bar {
     padding: 1rem 0;
-
   }
 }
 
