--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -97,9 +97,31 @@ pre {
   }
 }
 
+@media screen and (max-width: 499px) {
+  blockquote {
+    font-size: 2.2rem;
+    margin: 2rem 0 2rem 0;
+    padding-left: 1.5rem;
+  }
+}
+
+@media screen and (min-width: 500px) {
+  blockquote {
+    font-size: 2.6rem;
+    margin: 3rem 0 2rem 0;
+    padding-left: 30px;
+  }
+}
+
 blockquote {
+  font-weight: 400;
+  font-style: italic;
+  letter-spacing: -0.36px;
+  line-height: 3.6rem;
+  overflow-wrap: break-word;
+  color: rgba(0, 0, 0, 0.68);
   border-left: 4px solid $siimple-default-primary;
-  padding-left: 35px;
+  text-align: left;
 }
 
 .block {
