--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -7,9 +7,9 @@
   <div class="post__excerpt">
     <div class="post__spacer"></div>
     {{post.excerpt}}
-    {% if post.excerpt != post.content %}
+    <!-- {% if post.excerpt != post.content %}
     . . . <a href="{{site.baseurl}}{{post.url}}" class="link link--decorated">read more</a>
-    {% endif %}
+    {% endif %} -->
   </div>
 </article>
 {% endfor %}
