--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -1,11 +1,18 @@
 
+@media screen and (max-width: 499px) {
+  .post__excerpt {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .content {
     padding: 0 4%;
   }
   
   .post__title {
-    font-size: 3.4rem;
+    font-size: 1.8rem;
+    line-height: 2rem;
   }
 
   .post__excerpt, .post__content {
@@ -13,32 +20,48 @@
     letter-spacing: -.004em;
     font-size: 1.8rem;
   }
+
+  .blog__post {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .post__title {
-    font-size: 4rem;
+    font-size: 2.4rem;
+    line-height: 2.8rem;
+  }
+
+  .blog__post {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
   }
 }
 
-.blog__post {
-  margin-top: 3rem;
-  margin-bottom: 3rem;
-}
-
 .post__title {
-  font-weight: 400;
-  margin: .67rem 0;
+  font-weight: 600;
+  letter-spacing: -0.042rem;
+  font-family: $heading-font-family;
 }
 
 .post__time {
   display: block;
-  font-size: 1.8rem;
+  font-size: 1.4rem;
+  line-height: 1.4rem;
+  color: rgba(0,0,0,.54);
+  fill: rgba(0,0,0,.54);
+  letter-spacing: 0!important;
+  
 }
 
 .post__excerpt, .post__content {
   text-align: justify;
   line-height: 1.58;
+}
+
+.post__excerpt > p:first-child {
+  margin-top: 0rem;
 }
 
 .post__spacer {
@@ -55,6 +78,7 @@
 
 .blog__time {
   margin-bottom: 0.4*$p-margin-top;
+  // margin-top: 0.1*0.4*$p-margin-top;
 }
 
 .pagination__link {
