--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,6 +3,7 @@
 
 $siimple-default-primary: #13A4F2;
 $menu-item-font-family: 'Courier New', Courier, monospace;
+$heading-font-family: Georgia,Cambria,"Times New Roman",Times,serif;
 $menu-active-color:black;
 
 *, *::after, *::before {
@@ -28,7 +29,7 @@ body {
 }
 
 .heading {
-  font-family: Georgia,Cambria,"Times New Roman",Times,serif;
+  font-family: $heading-font-family;
   font-weight: 600;
   line-height: 1.25;
   margin-bottom: 16px;
