--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -1,3 +1,5 @@
+<h1 class="uncolored page__title">Blog</h1>
+
 {% for post in site.posts %}
 <article class="blog__post">
   <a href="{{site.baseurl}}{{post.url}}" class="link uncolored post__title blog__title">{{post.title}}</a>
