--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,17 +1,16 @@
-<main class="content">
-  <article class="blog__post">
-    <div style="margin-bottom:1rem;">
-      <a href="javascript:void(0)" class="link" onclick="window.history.back()">&#x2039; back</a>
-    </div>
-    <h1 class="uncolored post__title">{{page.title}}</h1>
-    <time class="post__time"><small>{{ page.date | date_to_string }}</small> <span id="mid-div" class="pagination__divider">&#183;</span> <small>{{ page.category | downcase }}</small></time>
+<article class="blog__post">
+  <!-- <div style="margin-bottom:1rem;">
+    <a href="javascript:void(0)" class="link" onclick="window.history.back()">&#x2039; back</a>
+  </div> -->
+  <h1 class="uncolored page__title">{{page.title}}</h1>
+  <time class="post__time"><small>{{ page.date | date_to_string }}</small> <span id="mid-div"
+      class="pagination__divider">&#183;</span> <small>{{ page.category | downcase }}</small></time>
 
-    <div class="post__content">
-      <div class="post__spacer"></div>
-      {{content}}
-    </div>
-  </article>
-    <div style="margin-bottom:1rem;">
-        <a href="javascript:void(0)" class="link" onclick="window.history.back()">&#x2039; back</a>
+  <div class="post__content">
+    <div class="post__spacer"></div>
+    {{content}}
   </div>
-</main>
+</article>
+<div style="margin-bottom:1rem;">
+  <a href="javascript:void(0)" class="link" onclick="window.history.back()">&#x2039; back</a>
+</div>
