--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -27,7 +27,8 @@ code {
   border-radius: 3px;
   padding: 3px 5px;
   font-family: Menlo,Monaco,"Courier New",Courier,monospace;
-  background-color: #eff0f1;
+  background-color: #d8d9da;
+  
 }
 
 mark, .highlighted {
