--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -27,7 +27,7 @@ code {
   border-radius: 3px;
   padding: 3px 5px;
   font-family: Menlo,Monaco,"Courier New",Courier,monospace;
-  background-color: #d8d9da;
+  background-color: #dadada;
   
 }
 
