--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -1,11 +1,20 @@
 
 @media screen and (max-width: 499px) {
+  .post__title {
+    font-weight: 500;
+  }
+  
   .post__excerpt {
     display: none;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 500px) {
+  .post__title {
+    font-weight: 600;
+  }
+}
+  @media screen and (max-width: 767px) {
   .content {
     padding: 0 4%;
   }
@@ -44,7 +53,6 @@
 }
 
 .post__title {
-  font-weight: 600;
   letter-spacing: -0.032rem;
   font-family: $heading-font-family;
   font-size: 2.1rem;
