--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -14,14 +14,15 @@
     font-weight: 600;
   }
 }
-  @media screen and (max-width: 767px) {
+
+@media screen and (max-width: 767px) {
   .content {
     padding: 0 4%;
   }
 
   .page__title {
     font-size: 3.4rem;
-    margin: 2rem 0 0 0 ;
+    margin: 2rem 0 3rem 0 ;
   }
 
   .post__excerpt, .post__content {
@@ -38,7 +39,7 @@
 @media screen and (min-width: 768px) {
   .page__title {
     font-size: 4rem;
-    margin: 3.5rem 0 0 0 ;
+    margin: 3.5rem 0 4rem 0 ;
   }
 
   .blog__post {
